<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="payment_details">Payment Details</string>
    <string name="card_number_label">Card Number</string>
    <string name="hint_card_mask">4321111111111111</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="hint_date">MM / YYYY</string>
    <string name="hint_security_mask">***</string>
    <string name="card_holder_name_label">Cardholder Name</string>
    <string name="hint_card_holder">Jane Smith</string>
    <string name="security_code">Security Code</string>
    <string name="submit">Submit</string>
    <string name="incorrect_card_number">The Card Number is not invalid. Please re-enter it.</string>
    <string name="incorrect_card_expiry">Invalid date</string>
    <string name="incorrect_card_cvv">Inalvid security code</string>
    <string name="incorrect_card_holder">Empty field</string>
    <string name="select_your_preferred_currency">Select your preferred currency</string>
    <string name="exchange_rate_used">(Exchange rate used: %s = %s)</string>
    <string name="exchange_rate_mark_up_commission">Exchange rate Mark-up: %s%%\nCommission for Currency Conversion: %s%%</string>
    <string name="tooltip_dcc_checked">I accept that I have been offered a choice of currencies for payment.\nI accept the conversion rate and final amount and that the final selected transaction currency is the cardholder\'s chosen currency: %1s\n\nReference Rate Provided by: %2s</string>
    <string name="tooltip_dcc_unchecked">Reference Rate Provided by: %s</string>
</resources>