<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/card_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/card_number_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/card_logo"
            android:layout_width="24dp"
            android:layout_height="16dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pb_loading"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/card_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:autofillHints="creditCardNumber"
        android:background="@android:color/transparent"
        android:hint="@string/hint_card_mask"
        android:inputType="number"
        android:padding="7.5dp" />

    <TextView
        android:id="@+id/card_number_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_card_number"
        android:textColor="@color/error_red"
        android:textSize="11sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="25dp">

            <TextView
                android:id="@+id/card_expiry_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/expiry_date" />

            <EditText
                android:id="@+id/card_expiry_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints="creditCardExpirationDate"
                android:background="@android:color/transparent"
                android:digits="0123456789"
                android:hint="@string/hint_date"
                android:inputType="number"
                android:maxLength="7"
                android:padding="7.5dp" />

            <TextView
                android:id="@+id/card_expiry_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_card_expiry"
                android:textColor="@color/error_red"
                android:textSize="11sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_security_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/security_code" />

            <EditText
                android:id="@+id/card_security_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints="creditCardSecurityCode"
                android:background="@android:color/transparent"
                android:hint="@string/hint_security_mask"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:padding="7.5dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/card_holder_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/card_holder_name_label" />

    <EditText
        android:id="@+id/card_holder_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:hint="@string/hint_card_holder"
        android:inputType="textPersonName"
        android:padding="7.5dp" />

    <com.globalpayments.android.sdk.ui.cardform.DccRateView
        android:id="@+id/dcc_rate_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        app:icon="@drawable/ic_lock"
        app:iconGravity="textStart" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_secure_ssl_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_gp_secure_logo" />

    </RelativeLayout>
</merge>